batch loading class done

--- a/Inpainting.ipynb
+++ b/Inpainting.ipynb
@@ -61,7 +61,29 @@
     "        self.itercount = 0\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return self.count"
+    "        return self.count\n",
+    "    \n",
+    "    def loadImage(self, imName):\n",
+    "        im = Image.open(imName)\n",
+    "        im = np.asarray(im)\n",
+    "        \n",
+    "        # rows, cols - im.shape[0], im.shape[1]\n",
+    "        im = cv2.resize(im, (self.imgHeight, self.imgWidth), interpolation=cv2.INTER_LINEAR)\n",
+    "        \n",
+    "        if len(im.shape == 2):\n",
+    "            print('Warning: load a gray image')\n",
+    "            im = im[:, :, np.newaxis]\n",
+    "            im = np.concatenate([im, im, im], axis=2)\n",
+    "            \n",
+    "        elif len(im.shape) > 2 and im.shape[2] == 4:\n",
+    "            print('Warning: load a RGBA image')\n",
+    "            im = im[:,:,:3]\n",
+    "        \n",
+    "        im = im.astype(np.uint8) \n",
+    "        \n",
+    "        im = im.transpose([2, 0, 1])\n",
+    "        \n",
+    "        return im"
    ],
    "metadata": {
     "collapsed": false,
@@ -80,7 +102,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "dd4fd6ff9a54b5c2"
+   "id": "d4a1f5861a852616"
   }
  ],
  "metadata": {
